--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,11 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
+.loader{
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
