--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,9 @@
 @tailwind utilities;
 
 li:hover{
-    border-bottom: 2px solid purple;
-    color: purple;
+    border-bottom: 2px solid #CD45FD;
+    color: #CD45FD;
+    padding: 5px;
 }
 body{
     background-color: black;
@@ -19,4 +20,30 @@ body{
     align-items: center;
     width: 100%;
     height: 100vh;
+}
+.banner{
+    background-image: url('./banner.jpeg');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+   
+    width: 100%;
+    height: 400px;
+}
+.line{
+    padding: 20px;
+    background-color: #E6E6E6;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    color: black;
+}
+.character{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 20px;
 }
