--- a/src/index.css
+++ b/src/index.css
@@ -45,5 +45,31 @@ body{
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 30px;
+}
+.What{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.seamless{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.sub{
+    background-color: #CD45FD;
+    padding: 30px;
+    border-radius: 10px;
+    width: 1000px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
