--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,22 @@ footer{
     border-bottom: 1px solid white;
     padding: 10px;
 }
+.foot{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+}
+.crypto{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+}
 @media only screen  and (max-width:550px) {
     .container{
         display: grid;
@@ -123,6 +139,11 @@ footer{
       display: flex;
       flex-direction: column;
     }
+    .foot{
+        display: flex;
+        flex-direction: column;
+        
+      }
     .media{
         display: flex;
         flex-direction: column;
@@ -131,4 +152,23 @@ footer{
         width: 200px;
         height: 300px;
     }
+    .crypto{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .item{
+        margin-right: 200px;
+    }
+    .items{
+        margin-right: 150px;
+    }
 }
+
+
+
+
+
+
+
