--- a/src/index.css
+++ b/src/index.css
@@ -66,14 +66,8 @@ h2{
 }
 .sub{
     background-color: #CD45FD;
-    padding: 30px;
-    border-radius: 10px;
-    width: 1000px;
-    height: 350px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding: 60px;
+    margin-top: 10px;
 
 }
 .last{
@@ -112,7 +106,7 @@ footer{
     justify-content: space-around;
     align-items: center;
     border-bottom: 1px solid white;
-    padding: 10px;
+    padding: 60px;
 }
 .foot{
     margin-top: 30px;
@@ -138,6 +132,7 @@ footer{
     footer{
       display: flex;
       flex-direction: column;
+      
     }
     .foot{
         display: flex;
@@ -149,8 +144,7 @@ footer{
         flex-direction: column;
     }
     .sub{
-        width: 200px;
-        height: 300px;
+      
     }
     .crypto{
         display: flex;
@@ -163,6 +157,20 @@ footer{
     }
     .items{
         margin-right: 150px;
+    }
+    .character{
+        display: flex;
+        flex-direction: column;
+    }
+    .line{
+        display: flex;
+        flex-direction: column;
+    }
+    .btn{
+        display: flex;
+        padding: 10px;
+        column-gap: 10px;
+        flex-direction: column;
     }
 }
 
