--- a/src/index.css
+++ b/src/index.css
@@ -158,6 +158,10 @@ footer{
     .items{
         margin-right: 150px;
     }
+    .itemss{
+        margin-left: 60px;
+        margin-top: 50px;
+    }
     .character{
         display: flex;
         flex-direction: column;
