--- a/src/index.css
+++ b/src/index.css
@@ -130,6 +130,27 @@ footer{
     align-items: center;
     justify-content: space-between;
 }
+.box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.seam{
+    border: 2px solid #CD45FD;
+    padding: 20px;
+    border-radius: 15px;
+
+   
+}
+
+.platform{
+    color: gray;
+}
+.hi{
+    font-weight: bold;
+    margin-top: 10px;
+}
 @media only screen  and (max-width:600px) {
     .container{
         display: grid;
@@ -139,6 +160,9 @@ footer{
       display: flex;
       flex-direction: column;
       
+    }
+    .seam{
+        width: 200px;
     }
     .foot{
         display: flex;
