--- a/src/index.css
+++ b/src/index.css
@@ -220,7 +220,7 @@ footer{
         
         margin-top: 10px;
     }
-    .btn{
+    .bt{
         margin-left: 100px;
         margin-top: 10px;
     }
