--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,9 @@ body{
     background-image: url('./banner.jpeg');
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size:cover;
     background-position: center;
    
     width: 100%;
